add: responsive design

--- a/product_details.html
+++ b/product_details.html
@@ -18,6 +18,7 @@
 <body>
     <header>
         <nav id="topbar">
+            <i id ="menu-dropdown" class="fas fa-bars"></i>
             <div id="left-menu">
                 <div id="logo"><a href="/index.html"><span>Shop</span>lane</a></div>
                 <a href="../index.html#clothing-section">Clothing</a>
@@ -52,7 +53,7 @@
                     <p id="description">Product Description</p>
                     <h4 class="section-heading">Product Preview</h4>
                     <div id="product-images">
-                        <!-- preview images -->
+                        <!-- images  -->
                     </div>
 
                     <button id="btn-add-to-cart">Add to Cart</button>
