--- a/checkout.html
+++ b/checkout.html
@@ -18,6 +18,7 @@
 <body>
     <header>
         <nav id="topbar">
+            <i id ="menu-dropdown" class="fas fa-bars"></i>
             <div id="left-menu">
                 <div id="logo"><a href="/index.html"><span>Shop</span>lane</a></div>
                 <a href="./index.html#clothing-section">Clothing</a>
