--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <header>
         <nav id="topbar">
+            <i id ="menu-dropdown" class="fas fa-bars"></i>
             <div id="left-menu">
                 <div id="logo"><a href="/index.html"><span>Shop</span>lane</a></div>
                 <a href="#clothing-section">Clothing</a>
@@ -39,7 +40,7 @@
     </header>
     <main>    
         <section>
-            <div class="center">
+            <div class="carousel">
                 <img src="https://imgur.com/96OnkX7.png" />
                 <img src="https://imgur.com/KtGxwnN.png" />
                 <img src="https://imgur.com/sfjg9R8.png" />
