--- a/checkout.html
+++ b/checkout.html
@@ -19,10 +19,19 @@
     <header>
         <nav id="topbar">
             <i id ="menu-dropdown" class="fas fa-bars"></i>
+            <div id="logo1"><a href="/index.html"><span>Shop</span>lane</a></div>
+            <div id="responsive-menu">
+                <a class="res-nav-link" href="index.html#clothing-section">Clothing</a>
+                <a class="res-nav-link" href="index.html#accessory-section">Accessories</a>
+                <div id="res-search-wrapper">
+                    <i class="fas fa-search"></i>
+                    <input id="search-box" type="text" name="search" placeholder="Search"/>
+                </div>
+            </div>
             <div id="left-menu">
                 <div id="logo"><a href="/index.html"><span>Shop</span>lane</a></div>
-                <a href="./index.html#clothing-section">Clothing</a>
-                <a href="./index.html#accessory-section">Accessories</a>
+                <a href="index.html#clothing-section">Clothing</a>
+                <a href="index.html#accessory-section">Accessories</a>
             </div>
             <div id="search-wrapper">
                 <i class="fas fa-search"></i>
@@ -33,7 +42,7 @@
                     <p id="cart-count">0</p>
                     <a href="/checkout.html"><i class="fas fa-shopping-cart"></i></a>
                 </div>
-                <img src="https://www.kindpng.com/picc/m/78-786207_user-avatar-png-user-avatar-icon-png-transparent.png" />
+                <img src="https://www.kindpng.com/picc/m/78-786207_user-avatar-png-user-avatar-icon-png-transparent.png"/>
             </div>
         </nav>
     </header>
@@ -85,7 +94,7 @@
             <p href="/" class="footer-link">United States</p>
         </div>
     </footer>
-    <script src="./base.js"></script>
+    <script src="js/common.js"></script>
     <script src="js/checkout.js"></script>
 </body>
 </html>
