--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <header>
         <nav id="topbar">
             <i id ="menu-dropdown" class="fas fa-bars"></i>
+            <div id="logo1"><a href="/index.html"><span>Shop</span>lane</a></div>
+            <div id="responsive-menu">
+                <a class="res-nav-link" href="#clothing-section">Clothing</a>
+                <a class="res-nav-link" href="#accessory-section">Accessories</a>
+                <div id="res-search-wrapper">
+                    <i class="fas fa-search"></i>
+                    <input id="search-box" type="text" name="search" placeholder="Search"/>
+                </div>
+            </div>
             <div id="left-menu">
                 <div id="logo"><a href="/index.html"><span>Shop</span>lane</a></div>
                 <a href="#clothing-section">Clothing</a>
@@ -93,7 +102,7 @@
             <p href="/" class="footer-link">United States</p>
         </div>
     </footer>
-    <script src="js/base.js"></script>
+    <script src="js/common.js"></script>
     <script src="js/index.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
