--- a/product_details.html
+++ b/product_details.html
@@ -40,7 +40,7 @@
             <div id="right-menu">
                 <div id="cart-wrapper">
                     <p id="cart-count">0</p>
-                    <a href="/checkout.html"><i class="fas fa-shopping-cart"></i></a>
+                    <a href="./checkout.html"><i class="fas fa-shopping-cart"></i></a>
                 </div>
                 <img src="https://www.kindpng.com/picc/m/78-786207_user-avatar-png-user-avatar-icon-png-transparent.png"/>
             </div>
